Finish building the UI and logic for single Round

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissors</title>
+
+    <style>
+        button {
+            height: 60px;
+            width: 120px;
+            margin: 20px;
+            padding: 10px;
+            background-color: chocolate;
+            border-radius: 8%;
+        }
+    </style>
 </head>
 
 <body>
 
+
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissor">Scissor</button>
+
+    <div id="display"></div>
 
 
     <script src="script.js"></script>
