--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             padding: 10px;
             background-color: chocolate;
             border-radius: 8%;
+            font-size: 22px;
+            color: darkgreen;
+        }
+
+        div {
+            font-size: 32px;
+            color: darkviolet;
         }
     </style>
 </head>
@@ -25,7 +32,10 @@
     <button id="paper">Paper</button>
     <button id="scissor">Scissor</button>
 
-    <div id="display"></div>
+    <div>
+        <p id="winner"></p>
+        <p id="score"></p>
+    </div>
 
 
     <script src="script.js"></script>
